# lib-expected

./: .travis.yml  CMakeLists.txt  README.md
include/lib-expected/: expected.hpp
test/: CMakeLists.txt  main.cpp
